src/antlr/ProductParser.java
// Generated from C:/Compiler/Compiler-Project-2/src/antlr/ProductParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ProductParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TRUE=1, FALSE=2, NONE=3, IF=4, ELSE=5, ELIF=6, FOR=7, WHILE=8, DEF=9, 
		RETURN=10, IMPORT=11, FROM=12, AS=13, CLASS=14, PASS=15, WITH=16, TRY=17, 
		EXCEPT=18, FINALLY=19, RAISE=20, BREAK=21, CONTINUE=22, AT=23, ASSIGN=24, 
		PLUS=25, MINUS=26, MUL=27, DIV=28, MOD=29, POW=30, LT=31, LE=32, GT=33, 
		GE=34, EQ=35, NEQ=36, AND=37, OR=38, NOT=39, IN=40, IS=41, LPAR=42, RPAR=43, 
		LBRACK=44, RBRACK=45, LCURL=46, RCURL=47, COMMA=48, COLON=49, DOT=50, 
		SEMI=51, UNDERSQ=52, ID=53, INT=54, FLOAT=55, STRING=56, LINE_COMMENT=57, 
		NEWLINE=58, WS=59, TAB_WS=60, INDENT=61, DEDENT=62;
	public static final int
		RULE_program = 0, RULE_import_stmt = 1, RULE_decorator = 2, RULE_module_name = 3, 
		RULE_statement = 4, RULE_simple_stmt = 5, RULE_compound_stmt = 6, RULE_func_def = 7, 
		RULE_parameters = 8, RULE_small_stmt = 9, RULE_return_stmt = 10, RULE_raise_stmt = 11, 
		RULE_expr = 12, RULE_comparisonExpr = 13, RULE_arithExpr = 14, RULE_call_chain = 15, 
		RULE_call_suffix = 16, RULE_atom = 17, RULE_generator_expr = 18, RULE_gen_expr = 19, 
		RULE_expr_stmt = 20, RULE_target = 21, RULE_arg_list = 22, RULE_arg = 23, 
		RULE_literal = 24, RULE_list_literal = 25, RULE_dict_literal = 26, RULE_pair = 27, 
		RULE_flow_stmt = 28, RULE_try_stmt = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "import_stmt", "decorator", "module_name", "statement", "simple_stmt", 
			"compound_stmt", "func_def", "parameters", "small_stmt", "return_stmt", 
			"raise_stmt", "expr", "comparisonExpr", "arithExpr", "call_chain", "call_suffix", 
			"atom", "generator_expr", "gen_expr", "expr_stmt", "target", "arg_list", 
			"arg", "literal", "list_literal", "dict_literal", "pair", "flow_stmt", 
			"try_stmt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'True'", "'False'", "'None'", "'if'", "'else'", "'elif'", "'for'", 
			"'while'", "'def'", "'return'", "'import'", "'from'", "'as'", "'class'", 
			"'pass'", "'with'", "'try'", "'except'", "'finally'", "'raise'", "'break'", 
			"'continue'", "'@'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'**'", 
			"'<'", "'<='", "'>'", "'>='", "'=='", "'!='", "'and'", "'or'", "'not'", 
			"'in'", "'is'", "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "':'", 
			"'.'", "';'", "'_'", null, null, null, null, null, null, null, "'\\t'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TRUE", "FALSE", "NONE", "IF", "ELSE", "ELIF", "FOR", "WHILE", 
			"DEF", "RETURN", "IMPORT", "FROM", "AS", "CLASS", "PASS", "WITH", "TRY", 
			"EXCEPT", "FINALLY", "RAISE", "BREAK", "CONTINUE", "AT", "ASSIGN", "PLUS", 
			"MINUS", "MUL", "DIV", "MOD", "POW", "LT", "LE", "GT", "GE", "EQ", "NEQ", 
			"AND", "OR", "NOT", "IN", "IS", "LPAR", "RPAR", "LBRACK", "RBRACK", "LCURL", 
			"RCURL", "COMMA", "COLON", "DOT", "SEMI", "UNDERSQ", "ID", "INT", "FLOAT", 
			"STRING", "LINE_COMMENT", "NEWLINE", "WS", "TAB_WS", "INDENT", "DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ProductParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProductParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ProductParser.EOF, 0); }
		public List<Import_stmtContext> import_stmt() {
			return getRuleContexts(Import_stmtContext.class);
		}
		public Import_stmtContext import_stmt(int i) {
			return getRuleContext(Import_stmtContext.class,i);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 135200347807424158L) != 0)) {
				{
				setState(62);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IMPORT:
				case FROM:
					{
					setState(60);
					import_stmt();
					}
					break;
				case TRUE:
				case FALSE:
				case NONE:
				case IF:
				case FOR:
				case DEF:
				case RETURN:
				case TRY:
				case RAISE:
				case AT:
				case LPAR:
				case LBRACK:
				case LCURL:
				case ID:
				case INT:
				case FLOAT:
				case STRING:
					{
					setState(61);
					statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(67);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Import_stmtContext extends ParserRuleContext {
		public Import_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_stmt; }
	 
		public Import_stmtContext() { }
		public void copyFrom(Import_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends Import_stmtContext {
		public TerminalNode IMPORT() { return getToken(ProductParser.IMPORT, 0); }
		public List<Module_nameContext> module_name() {
			return getRuleContexts(Module_nameContext.class);
		}
		public Module_nameContext module_name(int i) {
			return getRuleContext(Module_nameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ProductParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ProductParser.COMMA, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ProductParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ProductParser.NEWLINE, i);
		}
		public ImportStmtContext(Import_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FromImportStmtContext extends Import_stmtContext {
		public TerminalNode FROM() { return getToken(ProductParser.FROM, 0); }
		public Module_nameContext module_name() {
			return getRuleContext(Module_nameContext.class,0);
		}
		public TerminalNode IMPORT() { return getToken(ProductParser.IMPORT, 0); }
		public List<TerminalNode> ID() { return getTokens(ProductParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ProductParser.ID, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ProductParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ProductParser.COMMA, i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ProductParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ProductParser.NEWLINE, i);
		}
		public FromImportStmtContext(Import_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterFromImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitFromImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitFromImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_stmtContext import_stmt() throws RecognitionException {
		Import_stmtContext _localctx = new Import_stmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_import_stmt);
		int _la;
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IMPORT:
				_localctx = new ImportStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				match(IMPORT);
				setState(70);
				module_name();
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(71);
					match(COMMA);
					setState(72);
					module_name();
					}
					}
					setState(77);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(78);
					match(NEWLINE);
					}
					}
					setState(83);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case FROM:
				_localctx = new FromImportStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				match(FROM);
				setState(85);
				module_name();
				setState(86);
				match(IMPORT);
				setState(87);
				match(ID);
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(88);
					match(COMMA);
					setState(89);
					match(ID);
					}
					}
					setState(94);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(95);
					match(NEWLINE);
					}
					}
					setState(100);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecoratorContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(ProductParser.AT, 0); }
		public Module_nameContext module_name() {
			return getRuleContext(Module_nameContext.class,0);
		}
		public TerminalNode LPAR() { return getToken(ProductParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(ProductParser.RPAR, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ProductParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ProductParser.NEWLINE, i);
		}
		public Arg_listContext arg_list() {
			return getRuleContext(Arg_listContext.class,0);
		}
		public DecoratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decorator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterDecorator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitDecorator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitDecorator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecoratorContext decorator() throws RecognitionException {
		DecoratorContext _localctx = new DecoratorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decorator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(AT);
			setState(104);
			module_name();
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAR) {
				{
				setState(105);
				match(LPAR);
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 135200347797848078L) != 0)) {
					{
					setState(106);
					arg_list();
					}
				}

				setState(109);
				match(RPAR);
				}
			}

			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(112);
				match(NEWLINE);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Module_nameContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(ProductParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(ProductParser.ID, i);
		}
		public List<TerminalNode> DOT() { return getTokens(ProductParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(ProductParser.DOT, i);
		}
		public Module_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_name; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterModule_name(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitModule_name(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitModule_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_nameContext module_name() throws RecognitionException {
		Module_nameContext _localctx = new Module_nameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_module_name);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(ID);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(119);
				match(DOT);
				setState(120);
				match(ID);
				}
				}
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CompoundStmtContext extends StatementContext {
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public CompoundStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterCompoundStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitCompoundStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitCompoundStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleStmtContext extends StatementContext {
		public Simple_stmtContext simple_stmt() {
			return getRuleContext(Simple_stmtContext.class,0);
		}
		public SimpleStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterSimpleStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitSimpleStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitSimpleStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_statement);
		try {
			setState(128);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TRUE:
			case FALSE:
			case NONE:
			case RETURN:
			case RAISE:
			case LPAR:
			case LBRACK:
			case LCURL:
			case ID:
			case INT:
			case FLOAT:
			case STRING:
				_localctx = new SimpleStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				simple_stmt();
				}
				break;
			case IF:
			case FOR:
			case DEF:
			case TRY:
			case AT:
				_localctx = new CompoundStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				compound_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_stmtContext extends ParserRuleContext {
		public Small_stmtContext small_stmt() {
			return getRuleContext(Small_stmtContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ProductParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ProductParser.NEWLINE, i);
		}
		public Simple_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterSimple_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitSimple_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitSimple_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_stmtContext simple_stmt() throws RecognitionException {
		Simple_stmtContext _localctx = new Simple_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_simple_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			small_stmt();
			setState(134);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(131);
				match(NEWLINE);
				}
				}
				setState(136);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Compound_stmtContext extends ParserRuleContext {
		public Compound_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compound_stmt; }
	 
		public Compound_stmtContext() { }
		public void copyFrom(Compound_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FuncDefContext extends Compound_stmtContext {
		public Func_defContext func_def() {
			return getRuleContext(Func_defContext.class,0);
		}
		public FuncDefContext(Compound_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterFuncDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitFuncDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitFuncDef(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlowStmtContext extends Compound_stmtContext {
		public Flow_stmtContext flow_stmt() {
			return getRuleContext(Flow_stmtContext.class,0);
		}
		public FlowStmtContext(Compound_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterFlowStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitFlowStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitFlowStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class TryStmtContext extends Compound_stmtContext {
		public Try_stmtContext try_stmt() {
			return getRuleContext(Try_stmtContext.class,0);
		}
		public TryStmtContext(Compound_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterTryStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitTryStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitTryStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Compound_stmtContext compound_stmt() throws RecognitionException {
		Compound_stmtContext _localctx = new Compound_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_compound_stmt);
		try {
			setState(140);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEF:
			case AT:
				_localctx = new FuncDefContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(137);
				func_def();
				}
				break;
			case IF:
			case FOR:
				_localctx = new FlowStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				flow_stmt();
				}
				break;
			case TRY:
				_localctx = new TryStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(139);
				try_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Func_defContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(ProductParser.DEF, 0); }
		public TerminalNode ID() { return getToken(ProductParser.ID, 0); }
		public TerminalNode LPAR() { return getToken(ProductParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(ProductParser.RPAR, 0); }
		public TerminalNode COLON() { return getToken(ProductParser.COLON, 0); }
		public TerminalNode NEWLINE() { return getToken(ProductParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(ProductParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(ProductParser.DEDENT, 0); }
		public List<DecoratorContext> decorator() {
			return getRuleContexts(DecoratorContext.class);
		}
		public DecoratorContext decorator(int i) {
			return getRuleContext(DecoratorContext.class,i);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Func_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).enterFunc_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProductParserListener ) ((ProductParserListener)listener).exitFunc_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProductParserVisitor ) return ((ProductParserVisitor<? extends T>)visitor).visitFunc_def(this);
			else return visitor.visitChildren(this);
		}
	}
